cloudnative/module12/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  tls:
    - hosts:
        - ginhttp.com
      secretName: http-secret
  rules:
    - host: www.httpserver.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: http-svc
                port:
                  number: 8080
